chapter03/kubernetes/services/base/istio/auth-server-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-server-vs
spec:
  hosts:
  - "istio.uohiro.me.uk"
  gateways:
  - hands-on-gw
  http:
  - match:
    - uri:
        prefix: /oauth
    route:
    - destination:
        port:
          number: 80
        host: auth-server
