chapter03/kubernetes/services/base/istio/jwt-authentication-policy.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-request-authentication
spec:
  selector:
    matchLabels:
      app: product-composite
  jwtRules:
  - issuer: "http://auth-server.local"
    jwksUri: http://auth-server.hands-on.svc.cluster.local/.well-known/jwks.json
    fromHeaders:
    - name: Authorization
      prefix: "Bearer "
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-request-authorization
spec:
  selector:
    matchLabels:
      app: product-composite
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: ["/product-composite*"]
    when:
    - key: request.auth.claims[iss]
      values: ["http://auth-server.local"]
  - to:
    - operation:
        paths: ["/actuator*"]
